--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "Tests\\": "tests/"
         },
         "files": [
             "src/Core/functions.php"
@@ -20,6 +21,15 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "^11.5"
+        "phpunit/phpunit": "^11.5",
+        "pestphp/pest": "^3.8",
+        "phpstan/phpstan": "^2.1",
+        "laravel/pint": "^1.27",
+        "mockery/mockery": "^1.6"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     }
 }
